--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,11 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.html"
     - text: "In-class Exercise"
       menu:
-        - text: "In-class Exercise 1"
+        - text: "In-class Exercise 2"
+          href: "In-class_Ex/In-class_Ex02/In-class_Ex02.html"
+    - text: "Take-home Exercise"
+      menu:
+        - text: "Take-home Exercise 1"
           href: "In-class_Ex/In-class_Ex01/In-class_Ex01.html"
     right:
       - href: index.qmd
