--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,9 @@ website:
         - text: "In-class Exercise 5"
           href: "In-class_Ex/In-class_Ex05/In-class_Ex05.html"
         - text: "In-class Exercise 6"
-          href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html" 
+          href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
+        - text: "In-class Exercise 9"
+          href: "In-class_Ex/In-class_Ex09/In-class_Ex09.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
